maps & questions acitiviy permisie voor camera op correcte plek geplaatst Database toegevoegd en initialize fragments in details activity toegevoegd
problemen met livedata in mapsactivity opgelost

probleem met vragen in database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,10 +43,14 @@
         <uses-library android:name="com.google.android.maps" />
 
         <activity
-            android:name=".View.QuestionActivity"
+            android:name=".View.InformationActivity"
             android:label="@string/title_activity_question"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".View.showDatabase"></activity>
+        <activity android:name=".View.showDatabase" />
+        <activity
+            android:name=".View.QuestionActivity"
+            android:label="@string/title_activity_question"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
