--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
             android:name=".View.InformationActivity"
             android:label="@string/title_activity_question"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".View.showDatabase" />
+        <activity android:name=".View.showDatabase"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".View.QuestionActivity"
             android:label="@string/title_activity_question"
